[test] refactor ListTest to use parameterized tests